# Music-from-Youtube-playlist-to-telegram

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  HANDOFF.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SpaceMusicHubGUI.spec  build_exe.bat  docker-compose.yml  gui_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.bat  telegram_bot_music_youtube.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bot.yml  ci.yml
data/: .gitkeep
docs/: index.html
installer/: INSTALL.txt  Install-SpaceMusicHub.ps1  SpaceMusicHub.iss  Uninstall-SpaceMusicHub.ps1
tests/: conftest.py  test_bot.py  test_gui.py
