[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "space-music-hub"
version = "1.5.0"
description = "Telegram bot that mirrors YouTube playlists as MP3 audio files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.6",
    "yt-dlp>=2025.1.15",
    "python-dotenv==1.0.1",
    "ffmpeg-downloader>=1.1",
]

[project.urls]
Repository = "https://github.com/AAvlasins-dev/Music-from-Youtube-playlist-to-telegram"
"Bug Tracker" = "https://github.com/AAvlasins-dev/Music-from-Youtube-playlist-to-telegram/issues"
Changelog = "https://github.com/AAvlasins-dev/Music-from-Youtube-playlist-to-telegram/blob/master/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Ruff — linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*.local.bak.py", "downloads", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["BLE001"]   # catching broad Exception is intentional in retry logic

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
